# reportpl

./: .gitignore  .python-version  .~lock.compilado.docx#  README.md  compilado.docx  dev  mypy.ini  pyproject.toml
doc/: html_render.md
form/: package.json
form/public/: index.html
form/src/: App.css  App.tsx  index.tsx  setupProxy.js
front/: package.json
front/public/: index.html
front/src/: App.css  App.tsx
models/: __init__.py
models/celular_local/: pre.html  pre.py  test_data.py
models/celular_sinf/: initial_feeder.py  meta.json  pre.py  test_data.py
models/example/: __init__.py  instructions.md  pre.html  pre.py
models/example2/: initial_feeder.py  instructions.md  pre.py  test_data.py
models/sinf_generico/: __init__.py  init_dir.py  meta.json  pre.py
report_writer/: __init__.py  __main__.py  base_web_form.py  config.py  copy_spa.py  helpers.py  model_info.py  module_model.py  types.py  zipmodel.py
report_writer/api/: __init__.py  app.py  config.py  helpers.py  test.http
report_writer/doc_handler/: docx_handler.py  jenv.py
report_writer/html_render/: __init__.py
report_writer/models_example/: __init__.py
report_writer/pics_analyzer/: __init__.py
report_writer/web_converters/: __init__.py  cpf_converter.py  date_converter.py  float_converter.py  int_converter.py  path_converter.py  string_list_converter.py
report_writer/widgets/: __init__.py  array_widget.py  autocomplete_widget.py  base_widget.py  checkbox_widget.py  composite_widget.py  file_widget.py  objects_pics_widget.py  select_widget.py  text_area_widget.py  text_widget.py  typeahead_obj_widget.py  typeahead_widget.py  widget.py
reportpl/: __init__.py  __main__.py  base_web_form.py  config.py  converters.py  copy_spa.py  helpers.py  model_info.py  module_model.py  py.typed  types.py  zipmodel.py
reportpl/api/: __init__.py  app.py  config.py  helpers.py  test.http
reportpl/doc_handler/: __init__.py  docx_handler.py  filters.py  helpers_filters.py  jenv.py  (+1 more)
tests/: test_report_writer.py
(+184 files in other folders)
