[tool.poetry]
name = "report_writer"
version = "0.1.13"
description = ""
authors = ["renatormc <renatomartinsrmc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
stringcase = "^1.2.0"
docxtpl = "^0.16.0"
beautifulsoup4 = "*"
Pillow = "^9.1.0"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.36"
Markdown = "^3.3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
pytest = "^7.1"
types-Pillow = "^9.0.11"
types-beautifulsoup4 = "^4.10.18"
autopep8 = "^1.6.0"
sqlalchemy-stubs = "^0.4"
types-Markdown = "^3.3.23"
odin_pdf_parser = { git = "https://github.com/renatormc/odin_pdf_parser.git", branch = "v0.1.2" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
