[tool.poetry]
name = "reportpl"
version = "0.1.17"
description = ""
authors = ["renatormc <renatomartinsrmc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
stringcase = "^1.2.0"
docxtpl = "^0.16.0"
beautifulsoup4 = "*"
Pillow = "^9.1.0"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.36"
Markdown = "^3.3.7"
pdfminer-six = "^20221105"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
pytest = "^7.1"
types-Pillow = "^9.0.11"
types-beautifulsoup4 = "^4.10.18"
autopep8 = "^1.6.0"
sqlalchemy-stubs = "^0.4"
types-Markdown = "^3.3.23"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
